[package]
name = "advent-of-code-2024-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day1-1"
path = "./src/day1/1.rs"

[[bin]]
name = "day1-2"
path = "./src/day1/2.rs"

[[bin]]
name = "day2-1"
path = "./src/day2/1.rs"

[[bin]]
name = "day2-2"
path = "./src/day2/2.rs"

[[bin]]
name = "day3-1"
path = "./src/day3/1.rs"

[[bin]]
name = "day3-2"
path = "./src/day3/2.rs"

[[bin]]
name = "day4-1"
path = "./src/day4/1.rs"

[[bin]]
name = "day4-2"
path = "./src/day4/2.rs"

[[bin]]
name = "day5-1"
path = "./src/day5/1.rs"

[[bin]]
name = "day5-2"
path = "./src/day5/2.rs"

