[package]
name = "advent-of-code-2024-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

[[bin]]
name = "day1-1"
path = "./src/day1/1.rs"

[[bin]]
name = "day1-2"
path = "./src/day1/2.rs"

[[bin]]
name = "day2-1"
path = "./src/day2/1.rs"

[[bin]]
name = "day2-2"
path = "./src/day2/2.rs"

[[bin]]
name = "day3-1"
path = "./src/day3/1.rs"

[[bin]]
name = "day3-2"
path = "./src/day3/2.rs"

[[bin]]
name = "day4-1"
path = "./src/day4/1.rs"

[[bin]]
name = "day4-2"
path = "./src/day4/2.rs"

[[bin]]
name = "day5-1"
path = "./src/day5/1.rs"

[[bin]]
name = "day5-2"
path = "./src/day5/2.rs"

[[bin]]
name = "day6-1"
path = "./src/day6/1.rs"

[[bin]]
name = "day6-2"
path = "./src/day6/2.rs"

[[bin]]
name = "day7-1"
path = "./src/day7/1.rs"

[[bin]]
name = "day7-2"
path = "./src/day7/2.rs"

[[bin]]
name = "day8-1"
path = "./src/day8/1.rs"

[[bin]]
name = "day8-2"
path = "./src/day8/2.rs"

[[bin]]
name = "day9-1"
path = "./src/day9/1.rs"

[[bin]]
name = "day9-2"
path = "./src/day9/2.rs"

[[bin]]
name = "day10-1"
path = "./src/day10/1.rs"

[[bin]]
name = "day10-2"
path = "./src/day10/2.rs"

[[bin]]
name = "day11-1"
path = "./src/day11/1.rs"

[[bin]]
name = "day11-2"
path = "./src/day11/2.rs"

[[bin]]
name = "day12-1"
path = "./src/day12/1.rs"

[[bin]]
name = "day12-2"
path = "./src/day12/2.rs"

[[bin]]
name = "day13-1"
path = "./src/day13/1.rs"

[[bin]]
name = "day13-2"
path = "./src/day13/2.rs"